@@ -1,6 +1,7 @@
 Version 5.1.0
 - Added support for Spin2 constants clkmode_ and clkfreq_
 - Added built in ASMCLK macro for Spin2
+- Added CALL statement in BASIC
 - Allow semicolons to seperate lines in C inline assembly (this makes it possible to put inline assembly in macros)
 - Fixed another optimizer issue affecting C struct returns
 - Fixed undefined _basic_print_unsigned error.
